# claude-usage-monitor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml
docs/: data-source.md  reinstall-testing-sop.md  setup-statusline.md  usage-snapshot-schema.md
scripts/: build-dmg.sh  claude-statusline-collector.cjs
src/: popover.css  popover.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  onboarding.rs  settings.rs  snapshot.rs  tray.rs
widget/: README.md  project.yml
widget/ClaudeUsageMonitorHost/: ClaudeUsageMonitorHost.entitlements  main.swift
widget/ClaudeUsageWidget/: ClaudeUsageWidget.swift  Info.plist  SharedSnapshot.swift
